# petroscope

./: .gitignore  pyproject.toml  readme.md
petroscope/analysis/: geometry.py  reports.py  run.py  statistics.py
petroscope/calibrate/: core.py
petroscope/examples/: basic.py  calibration.py  segm_balancer.py  segm_cnn_inference.py  segm_cnn_test.py
petroscope/segmentation/: __init__.py  augment.py  classes.py  eval.py  fast_eval.py  loggers.py  losses.py  lumenstone.yaml  metrics.py  utils.py  vis.py
petroscope/segmentation/balancer/: __init__.py  balancer.py
petroscope/segmentation/models/: README.md  __init__.py  abstract.py  base.py  config.yaml  train.py
petroscope/segmentation/models/color_cluster/: model.py
petroscope/segmentation/models/hrnet/: __init__.py  model.py  nn.py
petroscope/segmentation/models/pspnet/: __init__.py  model.py  nn.py  train.py  train_config.yaml
petroscope/segmentation/models/resunet/: __init__.py  model.py  nn.py  train.py  train_config.yaml
petroscope/segmentation/models/upernet/: __init__.py  model.py  nn.py
petroscope/segmentation/scripts/: ParallelLaunch.py  create_dataset_split.py  custom_image_split.py  mask_from_colored.py  mask_postproc.py  print_dataset_stats.py  print_ds_stats.py  resize_ds.py  visualize_masks.py
tests/segmentation/balancer/: balancer_cache_test.py  balancer_dataloader_test.py  balancer_seed_test.py  conftest.py  test_balancer.py  test_balancer_seed.py  utils.py
