[project]
name = "petroscope"
version = "0.0.11"
authors = [
  { name="Alexander Khvostikov", email="khvostikov@cs.msu.ru" },
]
description = "Package containing a set of tools to process and analyze geological microscopic images."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyyaml",
    "numpy>=2.0.0",
    "opencv-python-headless",
    "albumentations",
    "plotly",
    "kaleido",
    "tqdm",
    "scipy",
    "scikit-image",
    "loguru",
    "prettytable",
    "requests",
]


[tool.setuptools.packages.find]
include = ["petroscope", "petroscope.*"]

[tool.setuptools.package-data]
"petroscope" = ["segmentation/*.yaml"]

[project.optional-dependencies]
extra = [
    "torch",
    "torchvision",
    "kornia",
    "hydra-core",
]

[project.urls]
Homepage = "https://github.com/xubiker/petroscope"
Issues = "https://github.com/xubiker/petroscope/issues"